<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dorothy</string>
    <string name="hello_world">Szia Világ!</string>
    <string name="action_settings">Kosár</string>
    <string name="title_activity_category_list">CategoryList</string>
    <string name="title_activity_second">Second</string>
    <string name="title_activity_kategoriak">Kategóriák</string>
    <string name="title_activity_etelek">Ételek</string>
    <string name="title_activity_etelek_reszlet">EtelekReszlet</string>
    <string name="reszletek">Részletek</string>
    <string name="kosarba">Kosárba</string>
    <string name="title_activity_kosar">Kosár</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="jelszo">Jelszó</string>
    <string name="buttonbejelentkezes">Bejelentkezés</string>
    <string name="email">E-mail</string>
    <string name="jelszoujra">Jelszó újra</string>
    <string name="buttonregisztracio">Regisztráció</string>
    <string name="title_activity_cim_valasztas">CimValasztas</string>
    <string name="btncimvalasztas">Tovább a címválasztáshoz</string>
    <string name="title_activity_megerosites">Megerosites</string>
    <string name="modositas">Módosítás</string>

</resources>
